tests/resource/valid/operation/equality_different_types.mamba
class MyClass
class MyOtherClass

def a := MyClass()
def b := MyOtherClass()

a = b
a != b
