tests/resource/invalid/type/call/calls_wrong_type.mamba
class MyClass
class OtherClass

def fun_b(x: MyClass) => print("a")

def other_class := OtherClass()
fun_b(other_class)
